--- a/tpl/index.html
+++ b/tpl/index.html
@@ -90,7 +90,7 @@
             <div class="clearfix"></div>
           </nav>
           <ul class="socials1">
-            <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s"><a href="<{spUrl c=login a=index}>"><img src="images/login.png" alt=""/></a></li>         
+            <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s"><a href="<{spUrl c=login a=loginIndex}>"><img src="images/login.png" alt=""/></a></li>         
           </ul>
         </div>
       </div>
