--- a/tpl/login.html
+++ b/tpl/login.html
@@ -125,7 +125,7 @@
       <li class="f18">主題描述及內文：</li> 
          <li class="pdt0"><input name="" type="text" class="usertext username" placeholder="帳戶號"></li>
   <li  class="pdt0"><input name="" type="text" class="usertext password" placeholder="密碼"></li>
-  <li class="pd0"><em class="red1">帳戶 / 密碼輸入錯誤 !</em><em class="rt"><a href="<{spUrl c=login a=register}>">註冊</a>  |  <a href="#">忘記密碼</a></em></li>
+  <li class="pd0"><em class="red1">帳戶 / 密碼輸入錯誤 !</em><em class="rt"><a href="<{spUrl c=login a=registerIndex}>">註冊</a>  |  <a href="#">忘記密碼</a></em></li>
  </div>
    <div class="loginnext loginAction wow fadeInDown">
      <h2><em class="rt btback">登錄</em></h2>
