--- a/tpl/result.html
+++ b/tpl/result.html
@@ -1,27 +1,3 @@
-<?php
-/* Smarty version 3.1.30, created on 2017-07-02 08:31:31
-  from "D:\xampp\htdocs\redwine\tpl\register.html" */
-
-/* @var Smarty_Internal_Template $_smarty_tpl */
-if ($_smarty_tpl->_decodeProperties($_smarty_tpl, array (
-  'version' => '3.1.30',
-  'unifunc' => 'content_595893434af002_97077230',
-  'has_nocache_code' => false,
-  'file_dependency' => 
-  array (
-    'df667d1ac4d7c08b6c40bf5a5a6746e31e9dadd7' => 
-    array (
-      0 => 'D:\\xampp\\htdocs\\redwine\\tpl\\register.html',
-      1 => 1498977076,
-      2 => 'file',
-    ),
-  ),
-  'includes' => 
-  array (
-  ),
-),false)) {
-function content_595893434af002_97077230 (Smarty_Internal_Template $_smarty_tpl) {
-?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,48 +10,24 @@ function content_595893434af002_97077230 (Smarty_Internal_Template $_smarty_tpl)
   <link rel="stylesheet" href="css/owl.carousel.css">
   <link rel="stylesheet" href="css/style.css">
    <link rel="stylesheet" href="css/user.css">
-  <?php echo '<script'; ?>
- src="js/jquery.js"><?php echo '</script'; ?>
->
-  <?php echo '<script'; ?>
- src="js/jquery-migrate-1.2.1.js"><?php echo '</script'; ?>
->
-  <?php echo '<script'; ?>
- src="js/camera.js"><?php echo '</script'; ?>
->
-  <?php echo '<script'; ?>
- src="js/owl.carousel.js"><?php echo '</script'; ?>
->
+  <script src="js/jquery.js"></script>
+  <script src="js/jquery-migrate-1.2.1.js"></script>
+  <script src="js/camera.js"></script>
+  <script src="js/owl.carousel.js"></script>
   <!--[if (gt IE 9)|!(IE)]><!-->
-  <?php echo '<script'; ?>
- src="js/jquery.mobile.customized.min.js"><?php echo '</script'; ?>
->
-  <?php echo '<script'; ?>
- src="js/wow/wow.js"><?php echo '</script'; ?>
->
-  <?php echo '<script'; ?>
- src="js/login.js"><?php echo '</script'; ?>
->
-  <?php echo '<script'; ?>
->
-      function result(){
-        window.location.href="<?php echo $_smarty_tpl->smarty->registered_plugins[Smarty::PLUGIN_FUNCTION]['spUrl'][0][0]->__template_spUrl(array('c'=>'login','a'=>'resultIndex'),$_smarty_tpl);?>
-";
-      }
+  <script src="js/jquery.mobile.customized.min.js"></script>
+  <script src="js/wow/wow.js"></script>
+  <script>
     $(document).ready(function () {
       if ($('html').hasClass('desktop')) {
         new WOW().init();
       }
-      $(".selecter").css({"left":document.body.clientWidth /2 - 150,"top":document.body.clientHeight /2 - 15});
     });
-  <?php echo '</script'; ?>
->
+  </script>
   <!--<![endif]-->
   
   <!--[if lt IE 9]>
-  <?php echo '<script'; ?>
- src="js/html5shiv.js"><?php echo '</script'; ?>
->
+  <script src="js/html5shiv.js"></script>
   <![endif]-->
   <style>
   .listbd td { padding-top:15px;margin:10px ;font-size:16px;}		
@@ -149,27 +101,20 @@ function content_595893434af002_97077230 (Smarty_Internal_Template $_smarty_tpl)
       <div class="wrapper1">
       <div class="container">
         <div class="row article">    
-              <h2>註冊帳號</h2>
+              <h2>會員檔案</h2>
               </div>
        
       </div>      
     </div>
-<div class="login wow fadeInUp"> 
-    <h2>請填寫以下項目 : </h2>
-        <li><input name="" type="text" class="usertext username" placeholder="帳戶名稱"></li>
-        <li class="pdt0"><input name="" type="text" class="usertext emailOrPhone" placeholder="電郵/電話號碼"></li>
-        <li class="pdt0"><input name="" type="password" class="usertext password" placeholder="登入密碼"></li>
-        <li class="pdt0"><input name="" type="password" class="usertext passwordRepeat" placeholder="確認密碼"></li>
-        <li class="pdt0 select" name="sex"><input type="text"  class="usertext sex" placeholder="性別" disabled="disabled"></li>
-        <li class="pdt0 select" name="age"><input type="text"  class="usertext age" placeholder="年齡" disabled="disabled"></li>
-        <li class="pdt0 select" name="yearsOfDrinking"><input type="text" class="usertext yearsOfDrinking" placeholder="酒齡" disabled="disabled"></li>
-        <li class="pd0"><em class="red1">密碼不可為空白</em></li>
+<div class="login  wow fadeInUp"> 
+
+      <li class="black1 pdt0">歡迎，<{$username}><br>激活賬戶驗證已發送至<{$contact}></li>
+
  </div>
-   <div class="loginnext registerAction wow fadeInDown">
-    <span>請輸入驗證碼：</span><input type="text" name="" class="verify"><iframe class="verifyImg" name="verifyIframe" src="<?php echo $_smarty_tpl->smarty->registered_plugins[Smarty::PLUGIN_FUNCTION]['spUrl'][0][0]->__template_spUrl(array('c'=>'login','a'=>'verifyImg'),$_smarty_tpl);?>
-"></iframe><a href="<?php echo $_smarty_tpl->smarty->registered_plugins[Smarty::PLUGIN_FUNCTION]['spUrl'][0][0]->__template_spUrl(array('c'=>'login','a'=>'verifyImg'),$_smarty_tpl);?>
-" target="verifyIframe" id="verifyImgRefresh"></a>
-     <h2 style="float: right;"><em class="rt btback">確定</em></h2>
+   <div class="loginnext wow fadeInDown">
+     <h2><a href="<{spUrl c=main a=index}>"><em class="rt btback">確定</em></a></h2>
+  
+ 
    </div>
 
 
@@ -196,15 +141,7 @@ function content_595893434af002_97077230 (Smarty_Internal_Template $_smarty_tpl)
     </div>
   </footer>
 </div>
-<div class="selecterWarp">
-    <div class="selecter">
-        <div class="selecterTitle"></div>
-        <div></div>
-    </div>
-</div>
-<?php echo '<script'; ?>
- src="js/script.js"><?php echo '</script'; ?>
->
+
+<script src="js/script.js"></script>
 </body>
-</html><?php }
-}
+</html>
