--- a/tpl/introduction.html
+++ b/tpl/introduction.html
@@ -87,7 +87,7 @@
         <div class="row mt20">
              
                 <div class="heading1">
-                  <h2 class="pdl20 fn24">達人影院<em class="fn13">(最後更新 :  2016-8-15)</em></h2>
+                  <h2 class="pdl20 fn24">達人好介紹<em class="fn13">(最後更新 :  2016-8-15)</em></h2>
                 </div>
                 <div class="box2-wrapper1">
                   <div class="box2 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s">
