--- a/tpl/logon.html
+++ b/tpl/logon.html
@@ -56,12 +56,12 @@
   <!--========================================================
                             HEADER
   =========================================================-->
-  <header id="header">
+<header id="header">
     <div class="container">
       <div class="row">
         <div class="grid_12  wpr">
           <h1 class="wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.1s">
-          <a href="index.html"><img src="images/logo.png" width="146" height="21"></a>
+          <a href="<{$index}>"><img src="images/logo.png" width="146" height="21"></a>
          <em class="wpa">&nbsp;&nbsp;繁&nbsp;<img class="x" src="images/ga1.png" /><img class="s" src="images/ga2.png" />
                    <div class="wowdrop">
             <a href="#">中文</a>
@@ -72,20 +72,20 @@
           <nav class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
             <ul class="sf-menu">             
               <li class="current"><a href="index.html">關於我們</a></li>
-              <li><a href="index-1.html">達人搞乜鬼</a></li>
-              <li><a href="index-2.html">食物對對碰</a>           
+              <li><a href="<{$activicity}>">達人搞乜鬼</a></li>
+              <li><a href="index-2.html">食物對對碰</a>
               </li>
-                <li><a href="#">吹水園地</a></li>
-              <li><a href="index-3.html">影院</a>
+                <li><a href="<{$forum}>">吹水園地</a></li>
+              <li><a href="<{$video}>">影院</a>
                 
               </li>
-              <li><a href="index-4.html">好介紹</a></li>
-               <li><a href="index-4.html">講你知</a></li>
+              <li><a href="<{$introduction}>">好介紹</a></li>
+               <li><a href="<{$tellyou}>">講你知</a></li>
             </ul>
             <div class="clearfix"></div>
           </nav>
           <ul class="socials1">
-            <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s"><a href="#"><img src="images/login.png" alt=""/></a></li>         
+            <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s"><a href="<{spUrl c=login a=loginIndex}>"><img src="images/login.png" alt=""/></a></li>         
           </ul>
         </div>
       </div>
