--- a/tpl/tellyou.html
+++ b/tpl/tellyou.html
@@ -41,7 +41,7 @@
       <div class="row">
         <div class="grid_12  wpr">
           <h1 class="wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.1s">
-          <a href="<{$index}>"><img src="images/logo.png" width="146" height="21"></a>
+          <a href="<{spUrl c=main a=index}>"><img src="images/logo.png" width="146" height="21"></a>
          <em class="wpa">&nbsp;&nbsp;繁&nbsp;<img class="x" src="images/ga1.png" /><img class="s" src="images/ga2.png" />
                    <div class="wowdrop">
             <a href="#">中文</a>
@@ -52,15 +52,15 @@
           <nav class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
             <ul class="sf-menu">             
               <li class="current"><a href="index.html">關於我們</a></li>
-              <li><a href="<{$activicity}>">達人搞乜鬼</a></li>
-              <li><a href="index-2.html">食物對對碰</a>
+              <li><a href="<{spUrl c=activicity a=index}>">達人搞乜鬼</a></li>
+              <li><a href="index-2.html">食物對對碰</a>           
               </li>
-                <li><a href="<{$forum}>">吹水園地</a></li>
-              <li><a href="<{$video}>">影院</a>
+                <li><a href="<{spUrl c=forum a=index}>">吹水園地</a></li>
+              <li><a href="<{spUrl c=video a=index}>">影院</a>
                 
               </li>
-              <li><a href="<{$introduction}>">好介紹</a></li>
-               <li><a href="<{$tellyou}>">講你知</a></li>
+              <li><a href="<{spUrl c=introduction a=index}>">好介紹</a></li>
+               <li><a href="<{spUrl c=tellyou a=index}>">講你知</a></li>
             </ul>
             <div class="clearfix"></div>
           </nav>
@@ -87,7 +87,7 @@
         <div class="row mt20">
              
                 <div class="heading1">
-                  <h2 class="pdl20 fn24">達人影院<em class="fn13">(最後更新 :  2016-8-15)</em></h2>
+                  <h2 class="pdl20 fn24">達人講你知<em class="fn13">(最後更新 :  2016-8-15)</em></h2>
                 </div>
                 <div class="box2-wrapper1">
                   <div class="box2 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s">
