--- a/tpl/result.html
+++ b/tpl/result.html
@@ -56,7 +56,7 @@
   <!--========================================================
                             HEADER
   =========================================================-->
-<header id="header">
+  <header id="header">
     <div class="container">
       <div class="row">
         <div class="grid_12  wpr">
@@ -84,9 +84,9 @@
             </ul>
             <div class="clearfix"></div>
           </nav>
-          <ul class="socials1">
-            <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s"><a href="<{spUrl c=login a=loginIndex}>"><img src="images/login.png" alt=""/></a></li>         
-          </ul>
+          
+          <{$loginInfo}>
+                   
         </div>
       </div>
     </div>
@@ -112,7 +112,7 @@
 
  </div>
    <div class="loginnext wow fadeInDown">
-     <h2><a href="<{spUrl c=main a=index}>"><em class="rt btback">確定</em></a></h2>
+     <h2><a href="<{spUrl c=login a=loginIndex}>"><em class="rt btback">確定</em></a></h2>
   
  
    </div>
