--- a/tpl/blog.html
+++ b/tpl/blog.html
@@ -36,7 +36,7 @@
   <!--========================================================
                             HEADER
   =========================================================-->
-<header id="header">
+  <header id="header">
     <div class="container">
       <div class="row">
         <div class="grid_12  wpr">
@@ -64,9 +64,9 @@
             </ul>
             <div class="clearfix"></div>
           </nav>
-          <ul class="socials1">
-            <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s"><a href="<{spUrl c=login a=loginIndex}>"><img src="images/login.png" alt=""/></a></li>         
-          </ul>
+          
+          <{$loginInfo}>
+                   
         </div>
       </div>
     </div>
