--- a/tpl/result.html
+++ b/tpl/result.html
@@ -108,7 +108,7 @@
     </div>
 <div class="login  wow fadeInUp"> 
 
-      <li class="black1 pdt0">歡迎，<{$username}><br>激活賬戶驗證已發送至<{$contact}></li>
+      <li class="black1 pdt0"><{$content}></li>
 
  </div>
    <div class="loginnext wow fadeInDown">
