--- a/tpl/register.html
+++ b/tpl/register.html
@@ -22,6 +22,7 @@
     var registerUrl="<{spUrl c=login a=register}>";
     var existsCheckUrl="<{spUrl c=login a=existsCheck}>";
     var resultUrl="<{spUrl c=login a=resultIndex}>";
+    var verification="<{spUrl c=login a=verification}>";
     $(document).ready(function () {
       if ($('html').hasClass('desktop')) {
         new WOW().init();
