--- a/tpl/register.html
+++ b/tpl/register.html
@@ -22,7 +22,7 @@
     var registerUrl="<{spUrl c=login a=register}>";
     var existsCheckUrl="<{spUrl c=login a=existsCheck}>";
     var resultUrl="<{spUrl c=login a=resultIndex}>";
-    var verification="<{spUrl c=login a=verification}>";
+    var verification="<{spUrl c=login a=verificationIndex}>";
     $(document).ready(function () {
       if ($('html').hasClass('desktop')) {
         new WOW().init();
