--- a/tpl/back/welcome.html
+++ b/tpl/back/welcome.html
@@ -24,12 +24,13 @@
 <body>
 <div class="page-container">
 	<p class="f-20 text-success">Redwine後台系統</p>
-	<p>登录次数：18 </p>
-	<p>上次登录IP：222.35.131.79.1  上次登录时间：2014-6-14 11:19:55</p>
+	<p>登錄次數：<{$logins}> </p>
+	<p>本次登錄IP：<{$now_login_ip}></p>
+	<p>上次登錄IP：<{$last_login_ip}>  上次登錄時間：<{$last_login_time}></p>
 	<table class="table table-border table-bordered table-bg">
 		<thead>
 			<tr>
-				<th colspan="7" scope="col">信息统计</th>
+				<th colspan="7" scope="col">信息統計</th>
 			</tr>
 			<tr class="text-c">
 				<th>统计</th>
