--- a/tpl/back/article-add.html
+++ b/tpl/back/article-add.html
@@ -26,44 +26,38 @@
 <![endif]-->
 <!--/meta 作为公共模版分离出去-->
 
-<title>新增文章 - 资讯管理 - H-ui.admin 3.0</title>
-<meta name="keywords" content="H-ui.admin 3.0,H-ui网站后台模版,后台模版下载,后台管理系统模版,HTML后台模版下载">
-<meta name="description" content="H-ui.admin 3.0，是一款由国人开发的轻量级扁平化网站后台模板，完全免费开源的网站后台管理系统模版，适合中小型CMS后台系统。">
+<title>新增文章 - 資訊管理</title>
 </head>
 <body>
 <article class="page-container">
-	<form class="form form-horizontal" id="form-article-add">
+	<form class="form form-horizontal" id="form-article-add" action="<{spUrl c=backfuns a=themeAdd}>" method="post" enctype="multipart/form-data">
+		<input class="theme" type="text" name="theme" value="activicity">
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>文章标题：</label>
+			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>文章標題：</label>
 			<div class="formControls col-xs-8 col-sm-9">
 				<input type="text" class="input-text" value="" placeholder="" id="articletitle" name="articletitle">
 			</div>
 		</div>
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">简略标题：</label>
+			<label class="form-label col-xs-4 col-sm-2">簡略標題：</label>
 			<div class="formControls col-xs-8 col-sm-9">
 				<input type="text" class="input-text" value="" placeholder="" id="articletitle2" name="articletitle2">
 			</div>
 		</div>
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>分类栏目：</label>
+			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>欄目分類：</label>
 			<div class="formControls col-xs-8 col-sm-9"> <span class="select-box">
 				<select name="articlecolumn" class="select">
-					<option value="0">全部栏目</option>
-					<option value="1">新闻资讯</option>
-					<option value="11">├行业动态</option>
-					<option value="12">├行业资讯</option>
-					<option value="13">├行业新闻</option>
+					<option value="0">達人搞乜鬼</option>
 				</select>
 				</span> </div>
 		</div>
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>文章类型：</label>
+			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>文章類型：</label>
 			<div class="formControls col-xs-8 col-sm-9"> <span class="select-box">
 				<select name="articletype" class="select">
-					<option value="0">全部类型</option>
-					<option value="1">帮助说明</option>
-					<option value="2">新闻资讯</option>
+					<option value="0">產品資訊</option>
+					<option value="1">幫助說明</option>
 				</select>
 				</span> </div>
 		</div>
@@ -74,7 +68,7 @@
 			</div>
 		</div>
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">关键词：</label>
+			<label class="form-label col-xs-4 col-sm-2">關鍵詞：</label>
 			<div class="formControls col-xs-8 col-sm-9">
 				<input type="text" class="input-text" value="" placeholder="多個關鍵詞請用分號( ; )分隔" id="keywords" name="keywords">
 			</div>
@@ -82,7 +76,7 @@
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2">文章摘要：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<textarea name="abstract" cols="" rows="" class="textarea"  placeholder="说点什么...最少输入10个字符" datatype="*10-100" dragonfly="true" nullmsg="备注不能为空！" onKeyUp="$.Huitextarealength(this,200)"></textarea>
+				<textarea name="abstract" cols="" rows="" class="textarea"  placeholder="" datatype="*10-100" dragonfly="true" nullmsg="不能為空！" onKeyUp="$.Huitextarealength(this,200)"></textarea>
 				<p class="textarea-numberbar"><em class="textarea-length">0</em>/200</p>
 			</div>
 		</div>
@@ -93,19 +87,18 @@
 			</div>
 		</div>
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">允许评论：</label>
+			<label class="form-label col-xs-4 col-sm-2">允許評論：</label>
 			<div class="formControls col-xs-8 col-sm-9 skin-minimal">
 				<div class="check-box">
-					<input type="checkbox" id="allowcomments" name="allowcomments" value="">
+					<input type="checkbox" id="allowcomments" name="allowcomments" value="1">
 					<label for="checkbox-pinglun">&nbsp;</label>
 				</div>
 			</div>
 		</div>
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">缩略图：</label>
+			<label class="form-label col-xs-4 col-sm-2">縮略圖：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<form class="form form-horizontal" action="" method="post" enctype="multipart/form-data">
-					<div class="img-box full">
+				<div class="img-box full">
 						<section class=" img-section">
 							<div class="z_photo upimg-div clear">
 									 <section class="z_file fl">
@@ -115,26 +108,25 @@
 							 </div>
 						 </section>
 						 <!-- <input name="" type="submit" class="btn btn-success radius size-L" value="上传"> -->
+				</div>
+				<aside class="mask works-mask">
+					<div class="mask-content">
+						<p class="del-p ">確定要刪除嗎？</p>
+						<p class="check-p"><span class="del-com wsdel-ok">確定</span><span class="wsdel-no">取消</span></p>
 					</div>
-				</form>
-					<aside class="mask works-mask">
-						<div class="mask-content">
-							<p class="del-p ">確定要刪除嗎？</p>
-							<p class="check-p"><span class="del-com wsdel-ok">確定</span><span class="wsdel-no">取消</span></p>
-						</div>
-					</aside>
+				</aside>
 			</div>
 		</div>
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">文章内容：</label>
+			<label class="form-label col-xs-4 col-sm-2">文章內容：</label>
 			<div class="formControls col-xs-8 col-sm-9"> 
-				<script id="editor" type="text/plain" style="width:100%;height:400px;"></script> 
+				<script id="editor" type="text/plain" style="width:100%;height:400px;"></script>
+				<textarea name="editorCont" id="editorCont"></textarea>
 			</div>
 		</div>
 		<div class="row cl">
 			<div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-2">
-				<button onClick="article_save_submit();" class="btn btn-primary radius" type="submit"><i class="Hui-iconfont">&#xe632;</i> 保存并提交审核</button>
-				<button onClick="article_save();" class="btn btn-secondary radius" type="button"><i class="Hui-iconfont">&#xe632;</i> 保存草稿</button>
+				<button class="btn btn-primary radius submit" type="submit"><i class="Hui-iconfont">&#xe632;</i> 保存并發佈</button>
 				<button onClick="removeIframe();" class="btn btn-default radius" type="button">&nbsp;&nbsp;取消&nbsp;&nbsp;</button>
 			</div>
 		</div>
@@ -167,56 +159,56 @@ $(function(){
 	});
 	
 	//表单验证
-	$("#form-article-add").validate({
-		rules:{
-			articletitle:{
-				required:true,
-			},
-			articletitle2:{
-				required:true,
-			},
-			articlecolumn:{
-				required:true,
-			},
-			articletype:{
-				required:true,
-			},
-			articlesort:{
-				required:true,
-			},
-			keywords:{
-				required:true,
-			},
-			abstract:{
-				required:true,
-			},
-			author:{
-				required:true,
-			},
-			sources:{
-				required:true,
-			},
-			allowcomments:{
-				required:true,
-			},
-			commentdatemin:{
-				required:false,
-			},
-			commentdatemax:{
-				required:false,
-			},
+	// $("#form-article-add").validate({
+	// 	rules:{
+	// 		articletitle:{
+	// 			required:true,
+	// 		},
+	// 		articletitle2:{
+	// 			required:true,
+	// 		},
+	// 		articlecolumn:{
+	// 			required:true,
+	// 		},
+	// 		articletype:{
+	// 			required:true,
+	// 		},
+	// 		articlesort:{
+	// 			required:true,
+	// 		},
+	// 		keywords:{
+	// 			required:true,
+	// 		},
+	// 		abstract:{
+	// 			required:true,
+	// 		},
+	// 		author:{
+	// 			required:true,
+	// 		},
+	// 		sources:{
+	// 			required:true,
+	// 		},
+	// 		allowcomments:{
+	// 			required:true,
+	// 		},
+	// 		commentdatemin:{
+	// 			required:false,
+	// 		},
+	// 		commentdatemax:{
+	// 			required:false,
+	// 		},
 
-		},
-		onkeyup:false,
-		focusCleanup:true,
-		success:"valid",
-		submitHandler:function(form){
-			//$(form).ajaxSubmit();
-			var index = parent.layer.getFrameIndex(window.name);
-			//parent.$('.btn-refresh').click();
-			parent.layer.close(index);
-		}
-	});
+	// 	},
+	// 	onkeyup:false,
+	// 	focusCleanup:true,
+	// 	success:"valid",
+	// 	submitHandler:function(form){
+	// 		//$(form).ajaxSubmit();
+	// 		var index = parent.layer.getFrameIndex(window.name);
+	// 		//parent.$('.btn-refresh').click();
+	// 		parent.layer.close(index);
+	// 	}
+	// });
 	
 	$list = $("#fileList"),
 	$btn = $("#btn-star"),
@@ -319,6 +311,11 @@ $(function(){
 	
 	var ue = UE.getEditor('editor');
 	
+	$(".submit").click(function(){
+		var contents = $("#ueditor_0").contents().find("body").html();
+		$("#editorCont").val(contents);
+	})
+
 });
 </script>
 <!--/请在上方写此页面业务相关的脚本-->
