--- a/tpl/back/index.html
+++ b/tpl/back/index.html
@@ -73,7 +73,7 @@
 			<dt><i class="Hui-iconfont">&#xe616;</i> 資訊管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
-					<li><a data-href="<{spUrl c=backfuns a=activicityList}>" data-title="達人搞乜鬼" href="javascript:void(0)">達人搞乜鬼</a></li>
+					<li><a data-href="<{spUrl c=backfuns a=articleList}>" data-title="資訊列表" href="javascript:void(0)">資訊列表</a></li>
 			</ul>
 		</dd>
 	</dl>
