--- a/tpl/back/index.html
+++ b/tpl/back/index.html
@@ -73,7 +73,8 @@
 			<dt><i class="Hui-iconfont">&#xe616;</i> 資訊管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
-					<li><a data-href="<{spUrl c=backfuns a=articleList}>" data-title="資訊列表" href="javascript:void(0)">資訊列表</a></li>
+					<li><a data-href="<{spUrl c=backfuns a=articleList title='達人搞乜鬼' id='0'}>" data-title="達人搞乜鬼" href="javascript:void(0)">達人搞乜鬼</a></li>
+					<li><a data-href="<{spUrl c=backfuns a=articleList title='達人好介紹' id='1'}>" data-title="達人好介紹" href="javascript:void(0)">達人好介紹</a></li>
 			</ul>
 		</dd>
 	</dl>
@@ -253,17 +254,5 @@ function member_add(title,url,w,h){
 
 
 </script> 
-
-<!--此乃百度统计代码，请自行删除-->
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?080836300300be57b7f34f4b3e97d911";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
-<!--/此乃百度统计代码，请自行删除-->
 </body>
 </html>
