--- a/tpl/back/article-list.html
+++ b/tpl/back/article-list.html
@@ -22,7 +22,7 @@
 <title>資訊列表</title>
 </head>
 <body>
-<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首頁 <span class="c-gray en">&gt;</span> 資訊管理 <span class="c-gray en">&gt;</span> 資訊列表 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
+<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首頁 <span class="c-gray en">&gt;</span> 資訊管理 <span class="c-gray en">&gt;</span> <{$title}> <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
 <div class="page-container">
 	<div class="text-c">
 	 <span class="select-box inline">
@@ -38,29 +38,34 @@
 		<input type="text" name="" id="" placeholder=" 资讯名称" style="width:250px" class="input-text">
 		<button name="" id="" class="btn btn-success" type="submit"><i class="Hui-iconfont">&#xe665;</i> 搜资讯</button>
 	</div>
-	<div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l"><a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a class="btn btn-primary radius" data-title="添加资讯" data-href="<{spUrl c=backfuns a=themeAdd}>" onclick="Hui_admin_tab(this)" href="javascript:;"><i class="Hui-iconfont">&#xe600;</i> 添加资讯</a></span> <span class="r">共有数据：<strong>54</strong> 条</span> </div>
+	<div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l"><a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a class="btn btn-primary radius" data-title="添加資訊" data-href="<{spUrl c=backfuns a=themeAdd id=<{$column}> title=<{$title}>}>" onclick="Hui_admin_tab(this)" href="javascript:;"><i class="Hui-iconfont">&#xe600;</i> 添加資訊</a></span>  </div>
 	<div class="mt-20">
-		<table class="table table-border table-bordered table-bg table-hover table-sort table-responsive">
+		<table class="table table-border table-bordered table-bg table-hover table-sort table-responsive dataTable">
 			<thead>
 				<tr class="text-c">
 					<th width="25"><input type="checkbox" name="" value=""></th>
 					<th width="80">ID</th>
-					<th>标题</th>
-					<th width="80">分类</th>
-					<th width="80">来源</th>
-					<th width="120">更新时间</th>
-					<th width="75">浏览次数</th>
-					<th width="60">发布状态</th>
+					<th>標題</th>
+					<th width="80">類型</th>
+					<th width="80">排序值</th>
+					<th>關鍵詞</th>
+					<th width="120">創建時間</th>
+					<th>更新時間</th>
+					<th width="75">作者</th>
+					<th>創建者</th>
+					<th>允許評論</th>
+					<th width="60">狀態</th>
 					<th width="120">操作</th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr class="text-c">
+				<!-- <tr class="text-c">
 					<td><input type="checkbox" value="" name=""></td>
 					<td>10001</td>
-					<td class="text-l"><u style="cursor:pointer" class="text-primary" onClick="article_edit('查看','article-zhang.html','10001')" title="查看">资讯标题</u></td>
+					<td class="text-l"><u style="cursor:pointer" class="text-primary" onClick="article_edit('查看','article-zhang.html','10001')" title="查看">资讯阿斯利康打飞机撒旦法立刻接拉萨打飞机标题</u></td>
 					<td>行业动态</td>
 					<td>H-ui</td>
+					<td>wocao</td>
 					<td>2014-6-11 11:11:42</td>
 					<td>21212</td>
 					<td class="td-status"><span class="label label-success radius">已发布</span></td>
@@ -72,11 +77,12 @@
 					<td class="text-l"><u style="cursor:pointer" class="text-primary" onClick="article_edit('查看','article-zhang.html','10002')" title="查看">资讯标题</u></td>
 					<td>行业动态</td>
 					<td>H-ui</td>
+					<td>nimei</td>
 					<td>2014-6-11 11:11:42</td>
 					<td>21212</td>
 					<td class="td-status"><span class="label label-success radius">草稿</span></td>
 					<td class="f-14 td-manage"><a style="text-decoration:none" onClick="article_shenhe(this,'10001')" href="javascript:;" title="审核">审核</a> <a style="text-decoration:none" class="ml-5" onClick="article_edit('资讯编辑','article-add.html','10001')" href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
-				</tr>
+				</tr> -->
 			</tbody>
 		</table>
 	</div>
@@ -92,15 +98,7 @@
 <script type="text/javascript" src="lib/datatables/1.10.0/jquery.dataTables.min.js"></script> 
 <script type="text/javascript" src="lib/laypage/1.2/laypage.js"></script>
 <script type="text/javascript">
-$('.table-sort').dataTable({
-	"aaSorting": [[ 1, "desc" ]],//默认第几个排序
-	"bStateSave": true,//状态保存
-	"pading":false,
-	"aoColumnDefs": [
-	  //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
-	  {"orderable":false,"aTargets":[0,8]}// 不参与排序的列
-	]
-});
+
 
 /*资讯-添加*/
 function article_add(title,url,w,h){
@@ -120,20 +118,21 @@ function article_edit(title,url,id,w,h){
 	});
 	layer.full(index);
 }
+
 /*资讯-删除*/
 function article_del(obj,id){
 	layer.confirm('确认要删除吗？',function(index){
+		var column = '<{$column}>';
 		$.ajax({
 			type: 'POST',
-			url: '',
-			dataType: 'json',
+			url: '<{spUrl c=backfuns a=articleDelete}>',
+			data:{column:column,id:id},
 			success: function(data){
-				$(obj).parents("tr").remove();
-				layer.msg('已删除!',{icon:1,time:1000});
-			},
-			error:function(data) {
-				console.log(data.msg);
-			},
+				if(data == "done"){
+					$(obj).parents("tr").remove();
+					layer.msg('已删除!',{icon:1,time:1000});
+				}
+			}
 		});		
 	});
 }
@@ -158,10 +157,25 @@ function article_shenhe(obj,id){
     	layer.msg('未通过', {icon:5,time:1000});
 	});	
 }
+
+function displaySwitch(id,act){
+	$.ajax({
+		url:"<{spUrl c=backfuns a=displaySwitch}>",
+		type:"post",
+		data:{id:id,act:act,column:"<{$column}>"},
+		success:function(data){
+			if(data == "ok"){
+				return "ok";
+			}
+		}
+	})
+}
+
 /*资讯-下架*/
 function article_stop(obj,id){
-	layer.confirm('确认要下架吗？',function(index){
-		$(obj).parents("tr").find(".td-manage").prepend('<a style="text-decoration:none" onClick="article_start(this,id)" href="javascript:;" title="发布"><i class="Hui-iconfont">&#xe603;</i></a>');
+	layer.confirm('確認要下架嗎？',function(index){
+		displaySwitch(id,"2");
+		$(obj).parents("tr").find(".td-manage").prepend('<a style="text-decoration:none" onClick="article_start(this,id)" href="javascript:;" title="發佈"><i class="Hui-iconfont">&#xe603;</i></a>');
 		$(obj).parents("tr").find(".td-status").html('<span class="label label-defaunt radius">已下架</span>');
 		$(obj).remove();
 		layer.msg('已下架!',{icon: 5,time:1000});
@@ -170,11 +184,12 @@ function article_stop(obj,id){
 
 /*资讯-发布*/
 function article_start(obj,id){
-	layer.confirm('确认要发布吗？',function(index){
-		$(obj).parents("tr").find(".td-manage").prepend('<a style="text-decoration:none" onClick="article_stop(this,id)" href="javascript:;" title="下架"><i class="Hui-iconfont">&#xe6de;</i></a>');
-		$(obj).parents("tr").find(".td-status").html('<span class="label label-success radius">已发布</span>');
+	layer.confirm('確認要發佈嗎？',function(index){
+		displaySwitch(id,"1");
+		$(obj).parents("tr").find(".td-manage").prepend('<a style="text-decoration:none" onClick="article_stop(this,'+id+')" href="javascript:;" title="下架"><i class="Hui-iconfont">&#xe6de;</i></a>');
+		$(obj).parents("tr").find(".td-status").html('<span class="label label-success radius">已發佈</span>');
 		$(obj).remove();
-		layer.msg('已发布!',{icon: 6,time:1000});
+		layer.msg('已發佈!',{icon: 6,time:1000});
 	});
 }
 /*资讯-申请上线*/
@@ -183,6 +198,72 @@ function article_shenqing(obj,id){
 	$(obj).parents("tr").find(".td-manage").html("");
 	layer.msg('已提交申请，耐心等待审核!', {icon: 1,time:2000});
 }
+
+$(function(){
+	function dataHandle(){
+		var id = "<{$column}>";
+		$.ajax({
+			url:"<{spUrl c=backfuns a=articleDataHandle}>",
+			type:"post",
+			data:{id:id},
+			success:function(data){
+				var dataObj = eval('(' + data + ')');
+				var article_type;
+				var allowcomments;
+				var display;
+				var update_time;
+				var displaySwitch;
+				for(i=0;i<dataObj.length;i++){
+					switch(dataObj[i]['article_type']){
+						case "0":article_type = "產品資訊";break;
+						case "1":article_type = "幫助說明";break;
+					}
+					switch(dataObj[i]['allowcomments']){
+						case "0":allowcomments = "×";break;
+						case "1":allowcomments = "√";break;
+					}
+					switch(dataObj[i]['display']){
+						case "0":display = '<span class="label label-success radius" style="background-color: #dd514c;">待發佈</span>';displaySwitch = '<a style="text-decoration:none" onClick="article_start(this,'+dataObj[i]['id']+')" href="javascript:;" title="發佈"><i class="Hui-iconfont">&#xe603;</i></a>';break;
+						case "1":display = '<span class="label label-success radius">已發佈</span>';displaySwitch = '<a style="text-decoration:none" onclick="article_stop(this,'+dataObj[i]['id']+')" href="javascript:;" title="下架"><i class="Hui-iconfont">&#xe6de;</i></a>';break;
+						case "2":display = '<span class="label label-success radius" style="background-color: #a0a0a0;">已下架</span>';displaySwitch = '<a style="text-decoration:none" onClick="article_start(this,'+dataObj[i]['id']+')" href="javascript:;" title="發佈"><i class="Hui-iconfont">&#xe603;</i></a>';break;
+					}
+					if(dataObj[i]['update_time'] == null){
+						update_time = "無";
+					}else{
+						update_time = dataObj[i]['update_time'];
+					}
+					var str = '\
+					<tr class="text-c">\
+						<td><input type="checkbox" value="" name=""></td>\
+						<td>'+dataObj[i]['id']+'</td>\
+						<td class="text-l"><u style="cursor:pointer" class="text-primary" onClick="article_edit("查看","article-zhang.html","10001")" title="查看">'+dataObj[i]['article_title']+'</u></td>\
+						<td>'+article_type+'</td>\
+						<td>'+dataObj[i]['article_sort']+'</td>\
+						<td>'+dataObj[i]['keywords']+'</td>\
+						<td>'+dataObj[i]['create_time']+'</td>\
+						<td>'+update_time+'</td>\
+						<td>'+dataObj[i]['author']+'</td>\
+						<td>'+dataObj[i]['creator']+'</td>\
+						<td>'+allowcomments+'</td>\
+						<td class="td-status">'+display+'</td>\
+						<td class="f-14 td-manage">'+displaySwitch+' <a style="text-decoration:none" class="ml-5" onClick="article_edit("资讯编辑","article-add.html",10001)" href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'+dataObj[i]['id']+')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>\
+					</tr>'
+					$(".dataTable tbody").append(str);
+				}
+				$('.table-sort').dataTable({
+					"aaSorting": [[ 1, "desc" ]],//默认第几个排序
+					"bStateSave": true,//状态保存
+					"pading":false,
+					"aoColumnDefs": [
+					  //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
+					  {"orderable":false,"aTargets":[0,8]}// 不参与排序的列
+					]
+				});
+			}
+		})
+	}
+	dataHandle();
+})
 
 </script> 
 </body>
